force-app/main/default/objects/Time_Entry__c/Time_Entry__c.object-meta.xml
<CustomObject>
    <description>A unit of work logged against a client: hours x rate. Billable entries are the source for invoices.</description>
    <label>Time Entry</label>
    <nameField>
        <displayFormat>TE-{00000}</displayFormat>
        <label>Time Entry Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Time Entries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>