force-app/main/default/objects/Time_Entry__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The client the work was done for. Allows ad-hoc billing without a Project.</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Time Entries</relationshipLabel>
    <relationshipName>Time_Entries</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>