force-app/main/default/objects/Time_Entry__c/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <description>Computed billable amount (Hours x the Project&apos;s Default Hourly Rate).</description>
    <formula>Hours__c * Project__r.Default_Hourly_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>