force-app/main/default/objects/Time_Entry__c/fields/Billable__c.field-meta.xml
<CustomField>
    <fullName>Billable__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Only billable entries are eligible for invoicing.</description>
    <label>Billable</label>
    <type>Checkbox</type>
</CustomField>