force-app/main/default/objects/Time_Entry__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <description>Last day of work covered by this entry.</description>
    <label>End Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>