force-app/main/default/objects/Time_Entry__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <description>First day of work covered by this entry. Used by the Build Invoice flow date range.</description>
    <label>Start Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>